# csbench

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  plot.py  prof.prof  profiling.prof  pyproject.toml  run_benchmark.sh  run_experiment.py
benchmarks/: execute.py
src/csbench/: data_managing.py  execute.py  machine_details.py  utils.py
src/csbench/engines/: abstract.py  mpstab.py  quimb.py  statevector.py
src/csbench/models/: circuits.py  observables.py
src/csbench/models /: circuits.py  observables.py
src/csbench/ui/: extract.py  plot_scalings.py
tests/: conftest.py  test_engine_expectation_value_consistency.py
