[tool.poetry]
name = "csbench"
version = "0.1.0"
description = "Benchmarks of quantum computing packages"
authors = ["MR^2"]
readme = "README.md"
packages = [{include = "csbench", from = "src"}]

[tool.poetry.dependencies]
# TODO: add mpstab to explicit dependencies when it is released
python = ">=3.10,<3.14"
qibo = "^0.3.2"
qibojit = "^0.1.15"
click = "^8.0"
scipy = "^1.0"
pre-commit = "^3.0"

[poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
